[lib]
crate-type = ["cdylib"]

[package]
name = "deno"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
# deno_bindgen = "0.7.0"
deno_bindgen = {path="../deno_bindgen/deno_bindgen"}
